wrike point 38 , 11 and font issue fixed on firefox win7

--- a/skin/frontend/ecart/default/css/checkout.css
+++ b/skin/frontend/ecart/default/css/checkout.css
@@ -378,7 +378,7 @@ margin-top:4px;margin-right: -20px;
     width: 250px;
     max-width: 100%;*/
     color: rgb(99, 99, 99);
-    background-color: rgb(244, 244, 244);
+  /*  background-color: rgb(244, 244, 244);*/
     /*padding: 5px 10px;*/
     display: inline-block;
     /*width: auto;
