--- a/skin/frontend/ecart/default/css/responsive.css
+++ b/skin/frontend/ecart/default/css/responsive.css
@@ -453,7 +453,10 @@ div.wp-custom-menu-popup{width:706px;}
         display: block;
     }
 }
-
+@-moz-document url-prefix(){
+    .mainhead ul li.call-us a{font-size:1.1em;}
+    .mainhead .reasonsnav ul li{font-size:11px;letter-spacing:0.2px;}
+}
 @media only screen and (max-width : 800px) {
 .desktop, .tablet { display: none; }
 .smartphones { display: block; }
