--- a/skin/frontend/ecart/default/css/style.css
+++ b/skin/frontend/ecart/default/css/style.css
@@ -834,6 +834,10 @@ font-size:16px;padding:0;line-height:2;}
     margin-bottom:25px;
     font-family:'GothamNarrow-Medium', sans-serif;
 }
+.__product__description h2{color: #fff;display:inline-block;padding:6px 12px;background-color: #f57a20;text-transform:uppercase;
+font-size:20px;font-family:inherit;}
+.__product__description h2:before{position:absolute;content:'';display:block;width:97.5%;height: 1px;background-color: #f57a20;
+left: 15px;top: 34px;}
 
 .__reviews__section .__review_heading {
     border-bottom: 1px rgb(204, 204, 204) dashed;
